--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@
 	</div>
 </section>
 
-<form name="contact" method="POST" netlify>
+<form name="contact" method="POST" data-netlify="true">
 	<p>
 	  <label>Your Name: <input type="text" name="name" /></label>
 	</p>
@@ -263,6 +263,7 @@
 	  <button type="submit">Send</button>
 	</p>
   </form>
+  
   
 
 
