--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 }
 
 .slide-track2 {
-  width: calc(150px * 15);
+  width: calc(150px * 20);
   display: flex;
-  animation: scroll2 5s linear infinite;
+  animation: scroll2 15s linear infinite;
   justify-content: space-between;
 }
 
@@ -94,10 +94,10 @@
 @keyframes scroll2 {
   0% {
     
-    transform: translateX(calc(-150px * 5));
+    transform: translateX(calc(-150px * 10));
   }
   100% {
-    transform: translateX(10px);
+    transform: translateX(0px);
   }
 }
 
@@ -347,33 +347,40 @@
     </div>
   </div>
 
-  <div class="slider p-1">
+  <div class="slider ">
     <div class="slide-track2">
-      <div class="slide bg-red-500">1</div>
-      <div class="slide bg-purple-500">2</div>
-      <div class="slide bg-blue-500">3</div>
-      <div class="slide bg-green-500">4</div>
-      <div class="slide bg-pink-500">5</div>
-
-      <!-- same 5 slides doubled (duplicate)-->
-      <div class="slide bg-red-500">1</div>
-      <div class="slide bg-purple-500">2</div>
-      <div class="slide bg-blue-500">3</div>
-      <div class="slide bg-green-500">4</div>
-      <div class="slide bg-pink-500">5</div>
-      <!-- same 5 slides tripled (duplicate 2)-->
-      <div class="slide bg-red-500">1</div>
-      <div class="slide bg-purple-500">2</div>
-      <div class="slide bg-blue-500">3</div>
-      <div class="slide bg-green-500">4</div>
-      <div class="slide bg-pink-500">5</div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/matisse/100/sql.png" alt="sql"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/color/50/pandas.png" alt="pandas"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/power-bi.png" alt="power-bi"/></div>
+      <!-- same 9 slides doubled (duplicate) -->
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/matisse/100/sql.png" alt="sql"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
+      <div class="slide bg-white-500 "><img width="50" height="50" src="https://img.icons8.com/color/50/pandas.png" alt="pandas"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/power-bi.png" alt="power-bi"/></div>
+    </div>
+ 
+   
+   
     </div>
   </div>
 </section>
 </section>
 
 
-
+<div class="visme_d" data-title="Client Contact Form" data-url="90p7jy1m-client-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="9010"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
 <section class="section pt-1 pb-4">
   <div class="container ">
     <div class="row">
