--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
   }
 
   .slide-track2 {
-    width: calc(80px * 15);
-  }
+    width: calc(80px * 20);  }
 
   .slide {
     width: 80px;
@@ -126,7 +125,7 @@
   @keyframes scroll2 {
     0% {
     
-    transform: translateX(calc(-150px * 10));
+    transform: translateX(calc(-80px * 10));
   }
   100% {
     transform: translateX(0px);
