icon slider done

--- a/index.html
+++ b/index.html
@@ -351,27 +351,29 @@
 
   <div class="slider ">
     <div class="slide-track2">
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/matisse/100/sql.png" alt="sql"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/color/50/pandas.png" alt="pandas"/></div>
-      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/power-bi.png" alt="power-bi"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/tableau-software.png" alt="tableau-software"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/kubernetes.png" alt="kubernetes"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/50/external-amazon-web-services-a-subsidiary-of-amazon-that-provides-on-demand-cloud-computing-logo-shadow-tal-revivo.png" alt="external-amazon-web-services-a-subsidiary-of-amazon-that-provides-on-demand-cloud-computing-logo-shadow-tal-revivo"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/hadoop-distributed-file-system.png" alt="hadoop-distributed-file-system"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/jenkins.png" alt="jenkins"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/spring-logo.png" alt="spring-logo"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/google-cloud.png" alt="google-cloud"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/tomcat.png" alt="tomcat"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/external-those-icons-flat-those-icons/50/external-PHP-programming-and-development-those-icons-flat-those-icons.png" alt="external-PHP-programming-and-development-those-icons-flat-those-icons"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/fluency/48/docker.png" alt="docker"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/000000/chatgpt.png" alt="chatgpt"/></div>
       <!-- same 9 slides doubled (duplicate) -->
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/matisse/100/sql.png" alt="sql"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
-      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
-      <div class="slide bg-white-500 "><img width="50" height="50" src="https://img.icons8.com/color/50/pandas.png" alt="pandas"/></div>
-      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/power-bi.png" alt="power-bi"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/tableau-software.png" alt="tableau-software"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/kubernetes.png" alt="kubernetes"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/50/external-amazon-web-services-a-subsidiary-of-amazon-that-provides-on-demand-cloud-computing-logo-shadow-tal-revivo.png" alt="external-amazon-web-services-a-subsidiary-of-amazon-that-provides-on-demand-cloud-computing-logo-shadow-tal-revivo"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/hadoop-distributed-file-system.png" alt="hadoop-distributed-file-system"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/jenkins.png" alt="jenkins"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/spring-logo.png" alt="spring-logo"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/google-cloud.png" alt="google-cloud"/></div>
+      <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/tomcat.png" alt="tomcat"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/external-those-icons-flat-those-icons/50/external-PHP-programming-and-development-those-icons-flat-those-icons.png" alt="external-PHP-programming-and-development-those-icons-flat-those-icons"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/fluency/48/docker.png" alt="docker"/></div>
+      <div class="slide bg-white-800"><img width="48" height="48" src="https://img.icons8.com/color/48/000000/chatgpt.png" alt="chatgpt"/></div>
     </div>
  
    
@@ -380,7 +382,6 @@
   </div>
 </section>
 
-<div class="visme_d" data-title="Client Contact Form" data-url="90p7jy1m-client-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="9010"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
 <section class="section pt-1 pb-4">
   <div class="container ">
     <div class="row">
