--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/fluency/50/github.png" alt="github"/></div>
       <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
       <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
@@ -340,7 +340,7 @@
       <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/fluency/48/azure-1.png" alt="azure-1"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/pulsar-color/48/javascript.png" alt="javascript"/></div>
-      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/bubbles/50/github.png" alt="github"/></div>
+      <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/fluency/50/github.png" alt="github"/></div>
       <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/plasticine/100/html-5.png" alt="html-5"/></div>
       <div class="slide bg-white-500"><img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/></div>
       <div class="slide bg-white-500"><img width="50" height="50" src="https://img.icons8.com/stickers/50/python.png" alt="python"/></div>
@@ -604,7 +604,8 @@
 			
 				</div>
 			</div>
-			<div class="col-lg-10">
+      <div class="visme_d" data-title="Photography Contact Form" data-url="mxkr1rp3-photography-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="9033"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
+			<!-- <div class="col-lg-10">
 				<div class="shadow rounded p-5 bg-white">
 					<div class="row">
 						<div class="col-12 mb-4">
@@ -634,13 +635,13 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </section>
 
 
-<section class="section testimonials overflow-hidden bg-tertiary pt-5">
+<section class="section testimonials overflow-hidden bg-tertiary pt-5 pb-4">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6">
@@ -784,13 +785,13 @@
   </div>
 </section>
 
-<section class="section teams">
+<section class="section teams pt-3">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12">
 				<div class="section-title text-center">
-					<p class="text-primary text-uppercase fw-bold mb-3">Questions You Have</p>
-					<h1>People Behind Us</h1>
+					<p class="text-primary text-uppercase fw-bold mb-3"></p>
+					<h1>Meet Our Industry Experts</h1>
 					<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing . egestas
 						<br>cursus pellentesque dignissim dui, congue. Vel etiam ut</p>
 				</div>
@@ -878,7 +879,7 @@
 </section>
 
 
-<section class="section">
+<section class="section pt-0">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12">
