color and logog changes

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 	<nav class="navbar navbar-expand-xl navbar-light text-center py-3">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">
-<h1>8BitGurus</h1>			</a>
+				<img loading="prelaod" decoding="async" class="img-fluid" width="230" src="images/logo.png" alt="Wallet">
+			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -258,7 +259,7 @@
         <div class="block text-center text-lg-start pe-0 pe-xl-5">
           <h1 class="text-capitalize mb-4">Stand Different from your peers !!</h1>
           <a type="button"
-            class="btn btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Explore Programs <span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
+            class="btn btn-primary " href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Explore Programs <span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
         </div>
       </div>
       <div class="col-lg-6">
@@ -501,7 +502,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8 mb-4">
         <div class="section-title text-center">
-          <h1>Why 8BitGurus ?</h1>
+          <h1>Why <span style="color: #fbcb0c;">8</span>Bit<span style="color: #fbcb0c;">Gurus</span> ?</h1>
         </div>
       </div>
       <div class="col-lg-10">
