--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 				<ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 					<li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
 					</li>
-					<li class="nav-item "> <a class="nav-link" href="about.html">About</a>
+					<li class="nav-item "> <a class="nav-link" href="#">Learn</a>
 					</li>
-					<li class="nav-item "> <a class="nav-link" href="how-it-works.html">How It Works</a>
+					<li class="nav-item "> <a class="nav-link" href="#">Blogs</a>
 					</li>
 					<li class="nav-item "> <a class="nav-link" href="services.html">Services</a>
 					</li>
@@ -194,8 +194,8 @@
 						</ul>
 					</li>
 				</ul>
-				<!-- account btn --> <a href="#!" class="btn btn-outline-primary">Log In</a>
-				<!-- account btn --> <a href="#!" class="btn btn-primary ms-2 ms-lg-3">Sign Up</a>
+				<!-- account btn --> <a href="#!" class="btn btn-outline-primary">Sign Up</a>
+				<!-- account btn --> <a href="#!" class="btn btn-primary ms-2 ms-lg-3">Apply as Mentor</a>
 			</div>
 		</div>
 	</nav>
@@ -604,8 +604,7 @@
 			
 				</div>
 			</div>
-      <div class="visme_d" data-title="Photography Contact Form" data-url="mxkr1rp3-photography-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="9033"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
-			<!-- <div class="col-lg-10">
+      <div class="visme_d" data-title="Photography Contact Form" data-url="mxkr1rp3-photography-contact-form" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="9033"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>			<!-- <div class="col-lg-10">
 				<div class="shadow rounded p-5 bg-white">
 					<div class="row">
 						<div class="col-12 mb-4">
