--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <div class="col-lg-6">
         <div class="ps-lg-5 text-center">
           <img loading="lazy" decoding="async"
-            src="https://demo.themesberg.com/swipe/assets/img/illustrations/scene-2.svg"
+            src="images/banner_illustration.png"
             alt="banner image" class="w-100">
         </div>
       </div>
