--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
       <div class="col-lg-6">
         <div class="ps-lg-5 text-center">
           <img loading="lazy" decoding="async"
-            src="images/banner_illustration.png"
-            alt="banner image" class="w-100">
+            src="images/banner_illustration.png" 
+            alt="banner image" class="">
         </div>
       </div>
     </div>
