--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 					</li>
 				</ul>
 				<!-- account btn --> <a href="#!" class="btn btn-outline-primary">Sign Up</a>
-				<!-- account btn --> <a href="#!" class="btn btn-primary ms-2 ms-lg-3">Apply as Mentor</a>
+				<!-- account btn --> <a type="button" class="btn btn-primary m-1 " href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Apply as Mentor <span style="font-size: 14px;" ></span></a>
+
 			</div>
 		</div>
 	</nav>
@@ -206,7 +207,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header border-bottom-0">
-        <h4 class="modal-title" id="exampleModalLabel">How much do you need?</h4>
+        <h4 class="modal-title" id="exampleModalLabel">Let's evaluate you as a Mentor</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -214,20 +215,21 @@
           <div class="row">
             <div class="col-lg-6 mb-4 pb-2">
               <div class="form-group">
-                <label for="loan_amount" class="form-label">Amount</label>
-                <input type="number" class="form-control shadow-none" id="loan_amount" placeholder="ex: 25000">
+                <label for="loan_amount" class="form-label">Experiance</label>
+                <input type="number" class="form-control shadow-none" id="loan_amount" placeholder="ex: 2yr">
               </div>
             </div>
             <div class="col-lg-6 mb-4 pb-2">
               <div class="form-group">
-                <label for="loan_how_long_for" class="form-label">How long for?</label>
-                <input type="number" class="form-control shadow-none" id="loan_how_long_for" placeholder="ex: 12">
+                <label for="loan_how_long_for" class="form-label">Domain</label>
+                
+                <input type="number" class="form-control shadow-none" id="loan_how_long_for" placeholder="ex: Web,Data,etc..">
               </div>
             </div>
             <div class="col-lg-12 mb-4 pb-2">
               <div class="form-group">
-                <label for="loan_repayment" class="form-label">Repayment</label>
-                <input type="number" class="form-control shadow-none" id="loan_repayment" disabled>
+                <label for="loan_repayment" class="form-label">Message for us</label>
+                <input type="text" class="form-control shadow-none" id="loan_repayment" >
               </div>
             </div>
             <div class="col-lg-6 mb-4 pb-2">
@@ -243,7 +245,7 @@
               </div>
             </div>
             <div class="col-lg-12">
-              <button type="submit" class="btn btn-primary w-100">Get Your Loan Now</button>
+              <button type="submit" class="btn btn-primary w-100">Submit Your Application</button>
             </div>
           </div>
         </form>
@@ -258,8 +260,8 @@
       <div class="col-lg-6 mb-5 mb-lg-0">
         <div class="block text-center text-lg-start pe-0 pe-xl-5">
           <h1 class="text-capitalize mb-4">Stand Different from your peers !!</h1>
-          <a type="button"
-            class="btn btn-primary " href="#" data-bs-toggle="modal" data-bs-target="#applyLoan">Explore Programs <span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
+          
+          <a type="button" class="btn btn-primary " href="#"  data-bs-target="#applyLoan">Explore Programs <span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
         </div>
       </div>
       <div class="col-lg-6">
@@ -493,6 +495,7 @@
 		</div>
 	</div>
 </section>
+
 
 
 
