--- a/index.html
+++ b/index.html
@@ -389,17 +389,17 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="section-title pt-4">
-          <p class="text-primary text-uppercase fw-bold mb-3">Our Services</p>
+          <p class="text-primary text-uppercase fw-bold mb-3">Our Programs</p>
           <h1>Explore our  programs.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipreiscing elit. Lacus penatibus tincidunt</p>
+          <p>Invest in your future with our diverse portfolio of professional development programs.
+          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 service-item">
         <a class="text-black" href="service-details.html">
           <div class="block"> <span class="colored-box text-center h3 mb-4">01</span>
             <h3 class="mb-3 service-title">Data Analytics</h3>
-            <p class="mb-0 service-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod</p>
+            <p class="mb-0 service-description">Classroom to boardroom, data to dollars. Dive into industry-driven analytics and make your mark.</p>
           </div>
         </a>
       </div>
@@ -407,8 +407,7 @@
         <a class="text-black" href="service-details.html">
           <div class="block"> <span class="colored-box text-center h3 mb-4">02</span>
             <h3 class="mb-3 service-title">Web Technologies</h3>
-            <p class="mb-0 service-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod</p>
+            <p class="mb-0 service-description">Go beyond pixels, craft experiences. Industry-driven web dev with projects that get you hired. Solve real problems, one line of code at a time.</p>
           </div>
         </a>
       </div>
@@ -421,8 +420,7 @@
 
             </span>
             <h3 class="mb-3 service-title">Consulting</h3>
-            <p class="mb-0 service-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod</p>
+            <p class="mb-0 service-description">Think Like a Consultant: Master the Framework for Building Compelling Guesstimates and Case Studies.</p>
           </div>
         </a>
       </div>
@@ -435,8 +433,7 @@
 
             </span>
             <h3 class="mb-3 service-title">Project Development</h3>
-            <p class="mb-0 service-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod</p>
+            <p class="mb-0 service-description">Say goodbye to project stress! We'll help you design, develop and execute your college projects that showcase your skills and impress future employers.</p>
           </div>
         </a>
       </div>
@@ -448,9 +445,8 @@
               05
 
             </span>
-            <h3 class="mb-3 service-title">Mock Tests</h3>
-            <p class="mb-0 service-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-              eirmod</p>
+            <h3 class="mb-3 service-title">Skill Evaluation</h3>
+            <p class="mb-0 service-description">Crack the job code: Level up your interview skills with free, simulated company challenges. Unleash your potential and unlock exciting career opportunities!</p>
           </div>
         </a>
       </div>
