--- a/index.html
+++ b/index.html
@@ -469,21 +469,18 @@
 						<div class="text-center">
 							<p class="count">01</p>
 							<h3 class="mb-3">Register For our Program</h3>
-							<p class="mb-0">Lorem ipsum dolor, consectetur adipiscing. Id egestas sceleriue dui id sed velit facsi eget. Magnis etra.</p>
 						</div>
 					</div>
 					<div class="step-item col-lg-4 col-md-6">
 						<div class="text-center">
 							<p class="count">02</p>
 							<h3 class="mb-3">Learn & Build Industry Projects</h3>
-							<p class="mb-0">Lorem ipsum dolor, consectetur adipiscing. Id egestas sceleriue dui id sed velit facsi eget. Magnis etra.</p>
 						</div>
 					</div>
 					<div class="step-item col-lg-4 col-md-6">
 						<div class="text-center">
 							<p class="count">03</p>
 							<h3 class="mb-3">Secure  internship and work with professionals.</h3>
-							<p class="mb-0">Lorem ipsum dolor, consectetur adipiscing. Id egestas sceleriue dui id sed velit facsi eget. Magnis etra.</p>
 						</div>
 					</div>
 				</div>
@@ -514,7 +511,7 @@
           <li class="nav-item m-2" role="presentation"> <a
               class="nav-link btn btn-outline-primary effect-none text-dark " id="pills-how-much-does-it-costs-tab"
               data-bs-toggle="pill" href="#pills-how-much-does-it-costs" role="tab"
-              aria-controls="pills-how-much-does-it-costs" aria-selected="true">Career Opportunities</a>
+              aria-controls="pills-how-much-does-it-costs" aria-selected="true">Program Paradigm</a>
           </li>
           <li class="nav-item m-2" role="presentation"> <a
               class="nav-link btn btn-outline-primary effect-none text-dark " id="pills-how-do-i-repay-tab"
@@ -528,12 +525,11 @@
             <div class="row align-items-center">
               <div class="col-md-6 order-1 order-md-0">
                 <div class="content-block">
-                  <h3 class="mb-4">How Much Can I Recive?</h3>
+                  <h3 class="mb-4">What is Our Approach?</h3>
                   <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consec tetasssur adipiscing elit. Tellus integer proin nisl pretium,
-                      vestibulum dictum blandit risus. Nisl commodo</p>
-                    <p>turpis vivamus donec. Id congue vesti bualum odio dignissim at quisque viverra. Non semper in sed
-                      quisque dui. Platea posuere ullamcorper id fames ut sed urna cursus eget. Neque, vel</p>
+                    <p>Our secret weapons are our Mentors steeped in real-world experience who will guide you with the latest technological tools in an innovative learning program. </p>
+                    <p>Develop game-changing projects that speak the language of the industry. You won't just learn coding, you'll code your future. And guess what? We don't break the bank - minimal fees unlock maximum opportunity.</p>
+                    <p style="color: #000000; font-weight: 800;">Because we don't just promise an <span style="color: rgb(217, 178, 20);">internship</span>, we make it happen !</p>
                   </div>
                 </div>
               </div>
@@ -550,12 +546,12 @@
             <div class="row align-items-center">
               <div class="col-md-6 order-1 order-md-0">
                 <div class="content-block">
-                  <h3 class="mb-4">How Much Does It Costs?</h3>
+                  <h3 class="mb-4">What is our Program Paradigm?</h3>
                   <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consec tetasssur adipiscing elit. Tellus integer proin nisl pretium,
-                      vestibulum dictum blandit risus. Nisl commodo</p>
-                    <p>turpis vivamus donec. Id congue vesti bualum odio dignissim at quisque viverra. Non semper in sed
-                      quisque dui. Platea posuere ullamcorper id fames ut sed urna cursus eget. Neque, vel</p>
+                    <p>Choose your career path from Data Analytics, Web Technologies, or Consulting, each fueled by projects currently shaping the industry. </p>
+                    <p>You'll immerse yourself in challenges tackled by professionals, building your skillset with every line of code. </p>
+                    <p>Get internships & build projects designed by the industry, for the future developers of tomorrow. <spanc style= "font-weight: 800; color: #000000;">Come, build your <span style="color: rgb(217, 178, 20) ;"> future</span> while shaping the present </span> </p>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -571,12 +567,11 @@
             <div class="row align-items-center">
               <div class="col-md-6 order-1 order-md-0">
                 <div class="content-block">
-                  <h3 class="mb-4">How Do I Repay?</h3>
+                  <h3 class="mb-4">How do we Propogate?</h3>
                   <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consec tetasssur adipiscing elit. Tellus integer proin nisl pretium,
-                      vestibulum dictum blandit risus. Nisl commodo</p>
-                    <p>turpis vivamus donec. Id congue vesti bualum odio dignissim at quisque viverra. Non semper in sed
-                      quisque dui. Platea posuere ullamcorper id fames ut sed urna cursus eget. Neque, vel</p>
+                    <p>For new learners, the community is a fertile ground. They're not alone in their struggles; they have a hand to hold when stuck on a tricky line of code or a shoulder to cry on when frustration sets in.</p>
+                    <p>It's a place where you can be yourself, unafraid to ask questions or make mistakes, knowing you'll be met with encouragement and understanding.</p>
+                    <p style="color: black; font-weight: 800;"> Here, everyone speaks the same language, the language of <span style="color:rgb(217, 178, 20) ;">logic</span> and <span style="color: rgb(217, 178, 20);">creativity</span>. </p>
                   </div>
                 </div>
               </div>
