--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 					<h4 class="mb-4 text-warning">Download Our Mobile App</h4>
 					<div class="pe-0 pe-xl-5 ">
             <a href="#!" class="btn btn-outline-primary"> Android</a>
-            <a href="#!" class="btn btn-outline-primary">IOS</a>	
+            <a href="#!" class="btn btn-outline-primary">IOS App</a>	
 					</div>
          			</div>
 			</div>
