--- a/index.html
+++ b/index.html
@@ -153,7 +153,15 @@
 </head>
 
 <body>
+  <div class="smart-banner">
+    <a href="#close" class="close">&times;</a>
+    <div class="meta">
+      <span class="name"> Download Our 
+        <b>MobileApp</b></span>
+    </div>
+    <a href="#!" class="btn btn-outline-primary pr-4">Download</a>  </div>
 
+  
 <!-- navigation -->
 <header class="navigation bg-tertiary">
 	<nav class="navbar navbar-expand-xl navbar-light text-center py-3">
@@ -1068,6 +1076,9 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/jquery@3.0.0/dist/jquery.min.js
+"></script>
 
 </body>
 </html>
