--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <a href="#close" class="cl font-bold pr-2">&times;</a>
         <div class="meta">
           <span class="name "> Download Our
-            <b>MobileApp</b></span>
+            <b>Mobile App</b></span>
         </div>
       </div>
       <div class="
@@ -301,7 +301,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-6 mb-5 mb-lg-0">
           <div class="block text-center text-lg-start pe-0 pe-xl-5">
-            <h1 class="text-capitalize mb-4">Stand Different from your peers !!</h1>
+            <h1 class="text-capitalize mb-4">Stand Different from your peers </h1>
 
             <a type="button" class="btn btn-primary " href="#" data-bs-target="#applyLoan">Explore Programs <span
                 style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
