--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
       <div class="
       col-6 text-right pt-1.5 pb-2 ">
-        <a href="#!" class="btn btn-outline-primary" style="margin-left: 20px;">Download</a>
+        <a href="https://play.google.com/store/apps/details?id=com.bandainamcoent.dblegends_ww&pcampaignid=merch_published_cluster_promotion_battlestar_featured_games&hl=en-IN" class="btn btn-outline-primary" style="margin-left: 20px;">Download</a>
       </div>
     </div>
 
@@ -1152,7 +1152,7 @@
             <h4 class="mb-4 text-warning">Download Our Mobile App</h4>
             <div class="pe-0 pe-xl-5 ">
               <a href="#!" class="btn btn-outline-primary"> Android</a>
-              <a href="#!" class="btn btn-outline-primary">IOS App</a>
+              <a href="#!" class="btn btn-outline-primary ml-2">IOS App</a>
             </div>
           </div>
         </div>
