--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
   </section>
 
 
-  <section class="section pt-0">
+  <section class="section pt-0 pb-5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
@@ -1016,8 +1016,7 @@
               <div id="collapse-ebd23e34fd2ed58299b32c03c521feb0b02f19d9"
                 class="accordion-collapse collapse border-0 show"
                 aria-labelledby="heading-ebd23e34fd2ed58299b32c03c521feb0b02f19d9" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">Get ready for a fully online experience at 8BitGurus! We use our advanced LMS platform to handle all aspects of the program, from onboarding to project completion. You'll never need to step foot in an office, making it perfect for those who prefer a flexible and remote work environment.</div>
               </div>
             </div>
             <div class="accordion-item p-1 mb-2">
@@ -1030,22 +1029,19 @@
               </h2>
               <div id="collapse-a443e01b4db47b3f4a1267e10594576d52730ec1" class="accordion-collapse collapse border-0 "
                 aria-labelledby="heading-a443e01b4db47b3f4a1267e10594576d52730ec1" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">No, you don't need prior coding experience to start learning! Coding is a skill that can be learned by anyone with the right motivation and resources. Here's why you can jump in without any experience.</div>
               </div>
             </div>
             <div class="accordion-item p-1 mb-2">
               <h2 class="accordion-header accordion-button h5 border-0 "
                 id="heading-4b82be4be873c8ad699fa97049523ac86b67a8bd" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapse-4b82be4be873c8ad699fa97049523ac86b67a8bd" aria-expanded="false"
-                aria-controls="collapse-4b82be4be873c8ad699fa97049523ac86b67a8bd">What are the internship start and end
-                dates?
+                aria-controls="collapse-4b82be4be873c8ad699fa97049523ac86b67a8bd">When will your Internship Start?
 
               </h2>
               <div id="collapse-4b82be4be873c8ad699fa97049523ac86b67a8bd" class="accordion-collapse collapse border-0 "
                 aria-labelledby="heading-4b82be4be873c8ad699fa97049523ac86b67a8bd" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">Completion of the course and your guided project is your key to unlocking the awesome internship experience at 8BitGurus!</div>
               </div>
             </div>
             <div class="accordion-item p-1 mb-2">
@@ -1058,8 +1054,7 @@
               </h2>
               <div id="collapse-3e13e9676a9cd6a6f8bfbe6e1e9fc0881ef247b3" class="accordion-collapse collapse border-0 "
                 aria-labelledby="heading-3e13e9676a9cd6a6f8bfbe6e1e9fc0881ef247b3" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">Prioritizing your studies is key! Your internship tasks will have flexible deadlines to help you effectively juggle your academic responsibilities.</div>
               </div>
             </div>
             <div class="accordion-item p-1 mb-2">
@@ -1067,13 +1062,12 @@
                 id="heading-0c2f829793a1f0562fea97120357dd2d43319164" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapse-0c2f829793a1f0562fea97120357dd2d43319164" aria-expanded="false"
                 aria-controls="collapse-0c2f829793a1f0562fea97120357dd2d43319164">Can I get a certificate of completion
-                after finishing a course?
+                after finishing a program?
 
               </h2>
               <div id="collapse-0c2f829793a1f0562fea97120357dd2d43319164" class="accordion-collapse collapse border-0 "
                 aria-labelledby="heading-0c2f829793a1f0562fea97120357dd2d43319164" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">Absolutely! Earning a certificate of completion at 8-bit Gurus is a rewarding milestone that signifies your coding prowess. we offer certificates for  internship program, making it a testament (proof) to your dedication and acquired skills, no matter your learning path.</div>
               </div>
             </div>
             <div class="accordion-item p-1 mb-2">
@@ -1086,8 +1080,7 @@
               </h2>
               <div id="collapse-8fe6730e26db16f15763887c30a614caa075f518" class="accordion-collapse collapse border-0 "
                 aria-labelledby="heading-8fe6730e26db16f15763887c30a614caa075f518" data-bs-parent="#accordionFAQ">
-                <div class="accordion-body py-0 content">The difference between and premium product consist number of
-                  components, plugins, page in each. The Free versions contain only a few elements and pages that.</div>
+                <div class="accordion-body py-0 content">Absolutely! Here's how 8-bit Gurus programs can nurture your portfolio in ways other resources might not because of Intricate Guidance ,Project Focus, Specialization and Depth of program.</div>
               </div>
             </div>
           </div>
@@ -1100,35 +1093,35 @@
 
 
 
-  <footer class="section-sm bg-tertiary">
+  <footer class="section-sm bg-tertiary ">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-2 col-md-4 col-6 mb-4">
           <div class="footer-widget">
-            <h5 class="mb-4 text-primary font-secondary">Service</h5>
+            <h5 class="mb-4 text-primary font-secondary">Programs</h5>
             <ul class="list-unstyled">
-              <li class="mb-2"><a href="service-details.html">Personal loans</a>
+              <li class="mb-2"><a href="#">Data Analytics</a>
               </li>
-              <li class="mb-2"><a href="service-details.html">Home Equity Loans</a>
+              <li class="mb-2"><a href="#">Web Technologies</a>
               </li>
-              <li class="mb-2"><a href="service-details.html">Student Loans</a>
+              <li class="mb-2"><a href="#">Consulting</a>
               </li>
-              <li class="mb-2"><a href="service-details.html">Mortgage Loans</a>
+              <li class="mb-2"><a href="#">Project Development</a>
               </li>
-              <li class="mb-2"><a href="service-details.html">Payday Loans</a>
+              <li class="mb-2"><a href="#">Skill Evaluation</a>
               </li>
             </ul>
           </div>
         </div>
         <div class="col-lg-2 col-md-4 col-6 mb-4">
           <div class="footer-widget">
-            <h5 class="mb-4 text-primary font-secondary">About</h5>
+            <h5 class="mb-4 text-primary font-secondary">Enagage</h5>
             <ul class="list-unstyled">
-              <li class="mb-2"><a href="#!">Benefits</a>
+              <li class="mb-2"><a href="#!">Apply As a Mentor</a>
               </li>
-              <li class="mb-2"><a href="#!">Careers</a>
+              <li class="mb-2"><a href="#!">Our LMS</a>
               </li>
-              <li class="mb-2"><a href="#!">Our Story</a>
+              <li class="mb-2"><a href="#!">Join Community</a>
               </li>
               <li class="mb-2"><a href="#!">Team</a>
               </li>
