--- a/index.html
+++ b/index.html
@@ -207,31 +207,13 @@
             </li>
             <li class="nav-item "> <a class="nav-link" href="#">Learn</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="#">Blogs</a>
+            <li class="nav-item "> <a class="nav-link" href="#">Programs</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="services.html">Services</a>
+            <li class="nav-item "> <a class="nav-link" href="">Internship</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="contact.html">Contact</a>
+            <li class="nav-item "> <a class="nav-link" href="">Contact</a>
             </li>
-            <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item " href="blog.html">Blog</a>
-                </li>
-                <li><a class="dropdown-item " href="blog-details.html">Blog Details</a>
-                </li>
-                <li><a class="dropdown-item " href="service-details.html">Service Details</a>
-                </li>
-                <li><a class="dropdown-item " href="faq.html">FAQ&#39;s</a>
-                </li>
-                <li><a class="dropdown-item " href="legal.html">Legal</a>
-                </li>
-                <li><a class="dropdown-item " href="terms.html">Terms &amp; Condition</a>
-                </li>
-                <li><a class="dropdown-item " href="privacy-policy.html">Privacy &amp; Policy</a>
-                </li>
-              </ul>
-            </li>
+            
           </ul>
           <!-- account btn --> <a href="#!" class="btn btn-outline-primary">Sign Up</a>
           <!-- account btn --> <a type="button" class="btn btn-primary m-1 " href="#" data-bs-toggle="modal"
@@ -807,51 +789,7 @@
               felis arcu. Vitae, turpisds tortr etiam faucibus ac suspendisse.</div>
           </div>
         </div>
-        <!-- <div class="col-lg-4 col-md-6 pt-1">
-        <div class="shadow rounded bg-white p-4 mt-4">
-          <div class="d-block d-sm-flex align-items-center mb-3">
-            <img loading="lazy" decoding="async"
-              src="images/testimonials/04.jpg"
-              alt="Devon Lane" class="img-fluid" width="65" height="66">
-            <div class="mt-3 mt-sm-0 ms-0 ms-sm-3">
-              <h4 class="h5 mb-1">Devon Lane</h4>
-              <p class="mb-0">Nursing Assistant</p>
-            </div>
-          </div>
-          <div class="content">Lorem ipsum dolor <a href="http://google.com">@reamansimond</a> demina egestas sit purus
-            felis arcu. Vitae, turpisds tortr etiam faucibus ac suspendisse.</div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 pt-1">
-        <div class="shadow rounded bg-white p-4 mt-4">
-          <div class="d-block d-sm-flex align-items-center mb-3">
-            <img loading="lazy" decoding="async"
-              src="images/testimonials/05.jpg"
-              alt="Bessie Cooper" class="img-fluid" width="65" height="66">
-            <div class="mt-3 mt-sm-0 ms-0 ms-sm-3">
-              <h4 class="h5 mb-1">Bessie Cooper</h4>
-              <p class="mb-0">Video Game Writer</p>
-            </div>
-          </div>
-          <div class="content">Lorem ipsum dolor <a href="http://google.com">@reamansimond</a> demina egestas sit purus
-            felis arcu. Vitae, turpisds tortr etiam faucibus ac suspendisse.</div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 pt-1">
-        <div class="shadow rounded bg-white p-4 mt-4">
-          <div class="d-block d-sm-flex align-items-center mb-3">
-            <img loading="lazy" decoding="async"
-              src="images/testimonials/06.jpg"
-              alt="Kathryn Murphy" class="img-fluid" width="65" height="66">
-            <div class="mt-3 mt-sm-0 ms-0 ms-sm-3">
-              <h4 class="h5 mb-1">Kathryn Murphy</h4>
-              <p class="mb-0">Film Critic</p>
-            </div>
-          </div>
-          <div class="content">Lorem ipsum dolor <a href="http://google.com">@reamansimond</a> demina egestas sit purus
-            felis arcu. Vitae, turpisds tortr etiam faucibus ac suspendisse.</div>
-        </div>
-      </div> -->
+  
       </div>
     </div>
     <div class="has-shapes">
