--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </li>
             
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-primary">Sign Up</a>
+          <!-- account btn --> <a href="https://learn.8bitgurus.com/t/home" class="btn btn-outline-primary">Sign Up</a>
           <!-- account btn --> <a type="button" class="btn btn-primary m-1 " href="#" data-bs-toggle="modal"
             data-bs-target="#applyLoan">Apply as Mentor <span style="font-size: 14px;"></span></a>
 
