--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <div class="block text-center text-lg-start pe-0 pe-xl-5">
             <h1 class="text-capitalize mb-4">Stand Different from your peers </h1>
 
-            <a type="button" class="btn btn-primary " href="https://learn.8bitgurus.com/" data-bs-target="#applyLoan">Explore Programs <span
+            <a type="button" class="btn btn-primary " href="https://learn.8bitgurus.com" data-bs-target="#applyLoan">Explore Programs <span
                 style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a>
           </div>
         </div>
