--- a/index.html
+++ b/index.html
@@ -285,37 +285,37 @@
         </div>
         <div class="modal-body">
           <form name="contact" action="#!" method="post" data-netlify="true">
+            <input type="hidden" name="form-name" value="contact"> <!-- This hidden input is required by Netlify -->
+          
             <div class="row">
               <div class="col-lg-6 mb-4 pb-2">
                 <div class="form-group">
-                  <label for="loan_amount" name="age" class="form-label">Experiance</label>
-                  <input type="number" class="form-control shadow-none" id="loan_amount" placeholder="ex: 2yr">
+                  <label for="loan_amount" class="form-label">Experience</label>
+                  <input type="number" class="form-control shadow-none" id="loan_amount" name="experience" placeholder="ex: 2yr">
                 </div>
               </div>
               <div class="col-lg-6 mb-4 pb-2">
                 <div class="form-group">
-                  <label for="loan_how_long_for" name="domain" class="form-label">Domain</label>
-
-                  <input type="text" class="form-control shadow-none" id="loan_how_long_for"
-                    placeholder="ex: Web,Data,etc..">
+                  <label for="loan_how_long_for" class="form-label">Domain</label>
+                  <input type="text" class="form-control shadow-none" id="loan_how_long_for" name="domain" placeholder="ex: Web,Data,etc..">
                 </div>
               </div>
               <div class="col-lg-12 mb-4 pb-2">
                 <div class="form-group">
-                  <label for="loan_repayment" name="message" class="form-label">Message for us</label>
-                  <input type="text" class="form-control shadow-none" id="loan_repayment">
+                  <label for="loan_repayment" class="form-label">Message for us</label>
+                  <input type="text" class="form-control shadow-none" id="loan_repayment" name="message">
                 </div>
               </div>
               <div class="col-lg-6 mb-4 pb-2">
                 <div class="form-group">
-                  <label for="loan_full_name" name="name"  class="form-label">Full Name</label>
-                  <input type="text" class="form-control shadow-none" id="loan_full_name">
+                  <label for="loan_full_name" class="form-label">Full Name</label>
+                  <input type="text" class="form-control shadow-none" id="loan_full_name" name="full_name">
                 </div>
               </div>
               <div class="col-lg-6 mb-4 pb-2">
                 <div class="form-group">
-                  <label for="loan_email_address" name="email" class="form-label">Email address</label>
-                  <input type="email" class="form-control shadow-none" id="loan_email_address">
+                  <label for="loan_email_address" class="form-label">Email address</label>
+                  <input type="email" class="form-control shadow-none" id="loan_email_address" name="email_address">
                 </div>
               </div>
               <div class="col-lg-12">
@@ -323,6 +323,7 @@
               </div>
             </div>
           </form>
+          
         </div>
       </div>
     </div>
