--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <div class="col-lg-12 mb-4 pb-2">
                 <div class="form-group">
                   <label for="loan_repayment" class="form-label">Describe Yourself in 60 words</label>
-                  <input type="text" class="form-control shadow-none" id="loan_repayment" name="message">
+                  <input type="text-area" class="form-control shadow-none" id="loan_repayment" name="message">
                 </div>
               </div>
               
