--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
               <div class="col-lg-12 mb-4 pb-2">
                 <div class="form-group">
                   <label for="loan_repayment" class="form-label">Describe Yourself in 60 words</label>
-                  <textarea type="text"  class="form-control shadow-none" id="loan_repayment" name="message">
+                  <textarea type="text"  class="form-control shadow-none" id="loan_repayment" name="message"> 
+                    </textarea>
                 </div>
               </div>
               
